Added timeline and to-do list to README

--- a/README
+++ b/README
@@ -3,3 +3,29 @@ CIS 419: Introduction to Machine Learning
 Final Project
 
 Philip Del Vecchio, Golam Kibria, Christian Wang
+
+
+TODO:
+Phil - Scraping recipes and nutritional value.
+Christian - Organizing flavor networks
+Golam - Set up ML algorithms using sklearn
+
+
+TIMELINE:
+Nov 13 - Meeting, Team Updates
+Begin drafting project update report
+
+Nov 16 - Project Update
+Scraping done
+All data and features set up
+Have it run on simple algorithms
+                
+Dec 7 - Project Due
+Pick and choose feature space
+Optimize algorithms
+
+
+NOTES:
+
+
+
