Added LaTeX project status report and bibliography

--- a/report/status_update/report.bib
+++ b/report/status_update/report.bib
@@ -1,75 +1,111 @@
-@inproceedings{langley00,
- author    = {P. Langley},
- title     = {Crafting Papers on Machine Learning},
- year      = {2000},
- pages     = {1207--1216},
- editor    = {Pat Langley},
- booktitle     = {Proceedings of the 17th International Conference
-              on Machine Learning (ICML 2000)},
- address   = {Stanford, CA},
- publisher = {Morgan Kaufmann}
-}
-
-@TechReport{mitchell80,
-  author = 	 "T. M. Mitchell",
-  title = 	 "The Need for Biases in Learning Generalizations",
-  institution =  "Computer Science Department, Rutgers University",
-  year = 	 "1980",
-  address =	 "New Brunswick, MA",
-}
-
-@phdthesis{kearns89,
-  author = {M. J. Kearns},
-  title =  {Computational Complexity of Machine Learning},
-  school = {Department of Computer Science, Harvard University},
-  year =   {1989}
-}
-
-@Book{MachineLearningI,
-  editor = 	 "R. S. Michalski and J. G. Carbonell and T.
-		  M. Mitchell",
-  title = 	 "Machine Learning: An Artificial Intelligence
-		  Approach, Vol. I",
-  publisher = 	 "Tioga",
-  year = 	 "1983",
-  address =	 "Palo Alto, CA"
-}
-
-@Book{DudaHart2nd,
-  author =       "R. O. Duda and P. E. Hart and D. G. Stork",
-  title =        "Pattern Classification",
-  publisher =    "John Wiley and Sons",
-  edition =      "2nd",
-  year =         "2000"
-}
-
-@misc{anonymous,
-  title= {Suppressed for Anonymity},
-  author= {Author, N. N.},
-  year= {2011},
-}
-
-@InCollection{Newell81,
-  author =       "A. Newell and P. S. Rosenbloom",
-  title =        "Mechanisms of Skill Acquisition and the Law of
-                  Practice", 
-  booktitle =    "Cognitive Skills and Their Acquisition",
-  pages =        "1--51",
-  publisher =    "Lawrence Erlbaum Associates, Inc.",
-  year =         "1981",
-  editor =       "J. R. Anderson",
-  chapter =      "1",
-  address =      "Hillsdale, NJ"
-}
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
 
 
-@Article{Samuel59,
-  author = 	 "A. L. Samuel",
-  title = 	 "Some Studies in Machine Learning Using the Game of
-		  Checkers",
-  journal =	 "IBM Journal of Research and Development",
-  year =	 "1959",
-  volume =	 "3",
-  number =	 "3",
-  pages =	 "211--229"
-}
+%% Created for Christian Wang at 2015-11-16 22:22:01 -0500 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@article{kinouchi08,
+	Author = {Osame Kinouchi and Rosa W. Diez-Garcia and Adriano J. Holanda and Pedro Zambianchi and Antonio C. Roque},
+	Date-Added = {2015-11-17 02:54:31 +0000},
+	Date-Modified = {2015-11-17 02:56:27 +0000},
+	Journal = {New Journal of Physics},
+	Month = {July},
+	Title = {The Nonequilibrium Nature of Culinary Evolution},
+	Volume = {10},
+	Year = {2008}}
+
+@book{burdock09,
+	Author = {George A. Burdock},
+	Date-Added = {2015-11-17 02:52:10 +0000},
+	Date-Modified = {2015-11-17 02:53:09 +0000},
+	Edition = {Sixth Ed.},
+	Month = {November},
+	Publisher = {CRC Press},
+	Title = {Fenaroli's Handbook of Flavor Ingredients},
+	Year = {2009}}
+
+@url{leffingwell00,
+	Author = {Leffingwell and Associates},
+	Date-Added = {2015-11-17 02:46:54 +0000},
+	Date-Modified = {2015-11-17 03:00:45 +0000},
+	Title = {VCF 2000 - Volatile Compounds in Food Database},
+	Urldate = {http://www.leffingwell.com/bacis1.htm}}
+
+@url{blumenthal02,
+	Author = {Heston Blumenthal},
+	Date-Added = {2015-11-17 02:44:41 +0000},
+	Date-Modified = {2015-11-17 03:21:45 +0000},
+	Title = {Weird but wonderful},
+	Urldate = {http://www.theguardian.com/lifeandstyle/2002/may/04/foodanddrink.shopping}}
+
+@inproceedings{teng12,
+	Address = {New York, NY},
+	Author = {Chun-Yuen Teng and Yu-Ru Lin and Lada A. Adamic},
+	Booktitle = {Proceedings of the 4th Annual ACM Web Science Conference},
+	Date-Added = {2015-11-17 02:27:10 +0000},
+	Date-Modified = {2015-11-17 02:28:38 +0000},
+	Pages = {298--307},
+	Publisher = {ACM},
+	Title = {Recipe recommendation using ingredient networks},
+	Year = {2012}}
+
+@article{ahn11,
+	Author = {Yong-Yeol Ahn and Sebastian E. Ahnert and James P. Bagrow and Albert-Laszlo Barabasi},
+	Date-Added = {2015-11-17 02:24:51 +0000},
+	Date-Modified = {2015-11-17 02:26:38 +0000},
+	Journal = {Scientific Reports},
+	Month = {October},
+	Title = {Flavor network and the principles of food pairing},
+	Year = {2011}}
+
+@mastersthesis{jagithyala14,
+	Address = {Manhattan, Kansas},
+	Author = {Anirudh Jagithyala},
+	Date-Added = {2015-11-17 02:23:09 +0000},
+	Date-Modified = {2015-11-17 02:24:19 +0000},
+	School = {Kansas State University},
+	Title = {Recommending Recipes Based On Ingredients and User Reviews},
+	Year = {2014}}
+
+@conference{yu13,
+	Author = {Ning Yu and Desislava Zhekova and Can Liu and Sandra Kubler},
+	Booktitle = {Workshop on Cooking with Computers (CWC)},
+	Date-Added = {2015-11-17 02:19:54 +0000},
+	Date-Modified = {2015-11-17 02:22:59 +0000},
+	Organization = {International Joint Conference on Artificial Intelligence},
+	Title = {Do Good Recipes Need Butter? Predicting User Ratings of Online Recipes},
+	Year = {2013}}
+
+@inproceedings{berkovsky10,
+	Address = {New York, NY},
+	Author = {Shlomo Berkovsky and Jill Freyne},
+	Booktitle = {Proceedings of the fourth ACM conference on Recommender systems},
+	Date-Added = {2015-11-17 02:17:00 +0000},
+	Date-Modified = {2015-11-17 02:19:47 +0000},
+	Pages = {111--118},
+	Title = {Group-based recipe recommendations: analysis of data aggregation strategies},
+	Year = {2010}}
+
+@techreport{harvey13,
+	Author = {Morgan Harvey and Bernd Ludwig and David Elsweiler},
+	Date-Added = {2015-11-17 02:13:22 +0000},
+	Date-Modified = {2015-11-17 02:16:15 +0000},
+	Institution = {Faculty of Informatics, University of Lugano, Lugano, Switzerland and Inst. for Info. and Media, Lang. and Culture, University of Regensburg, Germany},
+	Title = {You are what you eat: learning user tastes for rating prediction},
+	Year = {2013}}
+
+@inproceedings{liu14,
+	Address = {Dublin, Ireland},
+	Author = {C. Liu and C. Guo and D. Dakota and S. Rajagopalan and W. Li and S. Kubler and N. Yu},
+	Booktitle = {Proceedings of the Second Workshop on Natural Language Processing for Social Media (SocialNLP)},
+	Date-Added = {2015-11-17 02:10:56 +0000},
+	Date-Modified = {2015-11-17 03:20:19 +0000},
+	Month = {August},
+	Pages = {12-21},
+	Title = {"My Curiosity was Satisfied, but not in a Good Way'': Predicting User Ratings for Online Recipes},
+	Year = {2014}}
